--- a/src/admin/pages/css/Customers.css
+++ b/src/admin/pages/css/Customers.css
@@ -11,14 +11,14 @@
   }
   
   /* Page title styling */
-  .page-title {
-    font-size: 2.5rem;
+  .page-titlee {
+    font-size: 1.8rem;
     text-align: center;
     margin-bottom: 30px;
     color: #333;
     text-transform: uppercase;
     letter-spacing: 1px;
-    font-weight: 700;
+    font-weight: 600;
   }
   
   /* Customers section styling */
