--- a/src/components/css/Header2.css
+++ b/src/components/css/Header2.css
@@ -42,7 +42,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .header2 .company-name {
