--- a/src/components/css/Header3.css
+++ b/src/components/css/Header3.css
@@ -7,6 +7,8 @@
     align-items: center;
     border-top: 1px solid #e0e0e0;
     position: relative;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .hamburger {
@@ -102,11 +104,11 @@
     .header3 nav {
         position: fixed; /* Fixed positioning to cover the entire page */
         top: 0;
-        left: 0; /* Set left to 0 to align with the screen edge */
+        right: 0; /* Set left to 0 to align with the screen edge */
         right: auto; /* Remove auto width control */
         bottom: 0;
         background-color: #ffffff;
-        width: 260px; /* Define the width of the navigation menu */
+        width: 300px; /* Define the width of the navigation menu */
         flex-direction: column;
         padding: 50px 20px; /* Add some padding for space */
         display: flex;
