--- a/src/components/css/Homepage.css
+++ b/src/components/css/Homepage.css
@@ -33,4 +33,24 @@
   to {
     transform: rotate(360deg);
   }
+}@keyframes slideInFromLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInFromRight {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
