--- a/src/admin/pages/css/Reports.css
+++ b/src/admin/pages/css/Reports.css
@@ -7,13 +7,14 @@
     background-color: #f8f9fa;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    margin-top: 70px;
 }
 
 /* Page title styling */
 .page-title {
-    font-size: 2.5rem;
+    font-size: 2.0rem;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     color: #333;
     text-transform: uppercase;
     letter-spacing: 1px;
