--- a/src/components/css/Cart.css
+++ b/src/components/css/Cart.css
@@ -166,6 +166,10 @@
 }
 
 @media (max-width: 768px) {
+  .cart-address{
+
+    height: 100px;
+  }
   .cart-product {
     flex-direction: column;
     align-items: flex-start;
@@ -259,7 +263,7 @@
   background-color: #ffffff;
   width: 100%; /* Takes up full width of its container */
   max-width: 780px; /* Set a maximum width */
-  height: 120px;
+  height: 95px;
   margin-left: auto;
   margin-right: auto; /* Centers the address section */
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -477,3 +481,5 @@
   cursor: pointer;
   margin-left: auto; /* Push button to the right */
 }
+
+
